--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,12 @@
     <meta name="description" content="Web site created by 'Adil Ahamed'" />
     <link rel="apple-touch-icon" href="./logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- Bootstrap -->
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+
+    <!-- FONT AWESOME -->
+    <script
+      src="https://kit.fontawesome.com/c5e43ef009.js"
       crossorigin="anonymous"
-    /> -->
+    ></script>
 
     <title>Savemom</title>
   </head>
