--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,22 @@
       crossorigin="anonymous"
     ></script>
 
+    <!--Start of Tawk.to Script-->
+    <!-- <script type="text/javascript">
+      var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+      (function () {
+        var s1 = document.createElement('script'),
+          s0 = document.getElementsByTagName('script')[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/64c0c4d4cc26a871b02b48d0/1h68g1o8r';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
+      })();
+    </script> -->
+    <!--End of Tawk.to Script-->
+
     <title>Savemom</title>
   </head>
   <body>
